fix(plus/notifications): don't wrap filters menu, allow to grow

--- a/client/src/plus/search-filter/index.scss
+++ b/client/src/plus/search-filter/index.scss
@@ -47,6 +47,6 @@
   .search-filter-category .dropdown-list.filters-menu {
     left: auto;
     right: 0;
-    width: 180px;
+    white-space: nowrap;
   }
 }
